--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -1,7 +1,7 @@
 <!-- pages/welcome/welcome.wxml -->
 <view class="container">
   <image class="user-avatar" src="/images/avatar.png"></image>
-  <text class="user-text">Hello World!</text>
+  <text class="user-text">Nie Xiaojun</text>
   <view class="moto-container">
     <text class="moto">开启小程序之旅</text>
   </view>
