--- a/pages/posts/posts-item/posts-item-template.wxss
+++ b/pages/posts/posts-item/posts-item-template.wxss
@@ -1,3 +1,11 @@
+.post-container{
+  margin-top: 40rpx;
+  padding: 10rpx 0;
+  display: flex;
+  flex-direction: column;
+  border-top: 1px solid #ededed;
+  border-bottom: 1px solid #ededed;
+}
 /* .post-Container .post-author{
 
 } */
