封装豆瓣请求电影数据的API

--- a/components/moviesList/moviesList.wxml
+++ b/components/moviesList/moviesList.wxml
@@ -5,6 +5,6 @@
     <text class='right'>更多 ></text>
   </view>
   <view class="movies-list">
-    <movie wx:for="{{moviesList}}" wx:key="{{item.title}}" imgSrc="{{item.images.large}}" title="{{item.title}}" score="{{item.rating}}"></movie>
+    <movie wx:for="{{moviesList}}" wx:key="{{item.title}}" imgSrc="{{item.moviePoster}}" title="{{item.title}}" score="{{item.rating}}"></movie>
   </view>
 </view>
