--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -1,4 +1,4 @@
 <!--pages/movies/movies.wxml-->
-<movies-list listTitle="正在热映" moviesList="{{moviesBeingRelease}}"></movies-list>
-<movies-list listTitle="即将上映" moviesList="{{moviesWillBeReleased}}"></movies-list>
-<movies-list listTitle="高分电影" moviesList="{{highScoreMovies}}"></movies-list>
+<movies-list category="moviesBeingRelease" listTitle="正在热映" moviesList="{{moviesBeingRelease}}"></movies-list>
+<movies-list category="moviesWillBeReleased" listTitle="即将上映" moviesList="{{moviesWillBeReleased}}"></movies-list>
+<movies-list category="highScoreMovies" listTitle="高分电影" moviesList="{{highScoreMovies}}"></movies-list>
