--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -2,25 +2,15 @@
 <view class="movies-container">
   <view class="search-container">
     <icon type="search" size="14"></icon>
-    <input 
-    type="text" 
-    placeholder="输入内容搜索" 
-    value="{{searchContent}}"
-    bindfocus="onFocus" 
-    bindblur="onBlur"
-    bindinput="onInput"
-    />
+    <input type="text" placeholder="输入内容搜索" value="{{searchContent}}" bindinput="onInput" bindconfirm="onConfirm" />
     <icon wx:if="{{showClearBtn}}" type="clear" size="14" catchtap="clearSearchContent"></icon>
   </view>
-  <view wx:if="{{!searchResult.length}}" class="movies">
-    <movies-list category="moviesBeingRelease" list-title="正在热映" movies-list="{{moviesBeingRelease}}">
-    </movies-list>
-    <movies-list category="moviesWillBeReleased" list-title="即将上映" movies-list="{{moviesWillBeReleased}}">
-    </movies-list>
-    <movies-list category="highScoreMovies" list-title="高分电影" movies-list="{{highScoreMovies}}">
-    </movies-list>
+  <view wx:if="{{searchResult.length}}" class="search-movies">
+    <movies-grid movies-list="{{searchResult}}" />
   </view>
-  <view wx:else>
-  搜索结果
+  <view wx:else class="movies">
+    <movies-list category="moviesBeingRelease" list-title="正在热映" movies-list="{{moviesBeingRelease}}" />
+    <movies-list category="moviesWillBeReleased" list-title="即将上映" movies-list="{{moviesWillBeReleased}}" />
+    <movies-list category="highScoreMovies" list-title="高分电影" movies-list="{{highScoreMovies}}" />
   </view>
 </view>
