--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -4,8 +4,14 @@ Page {
   font-size: 24rpx;
 }
 .search-container {
+  background-color: #F2F2F2;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
   display: flex;
   flex-direction: row;
+  z-index: 1;
 }
 .search-container icon {
   padding: 13px 13px;
@@ -14,3 +20,9 @@ Page {
   height: 40px;
   flex: 1;
 }
+.search-movies,.movies{
+  margin-top: 40px;
+}
+/* .search-movies {
+  padding-top: 10rpx;
+} */
