完成点击电影跳转至电影详情页面；修改doubanAPI：使用Promise代替回调函数

--- a/components/movie/movie.wxml
+++ b/components/movie/movie.wxml
@@ -1,5 +1,5 @@
 <!--components/movie/movie.wxml-->
-<view class="movie-container">
+<view class="movie-container" catchtap="naveToMovieDetails" data-movie-id="{{movieId}}">
   <image class="movie-pic" src="{{imgSrc}}"></image>
   <text class="movie-title">{{title}}</text>
   <stars score="{{score}}"></stars>
