--- a/pages/movies/movieDetails/movieDetails.wxss
+++ b/pages/movies/movieDetails/movieDetails.wxss
@@ -1,1 +1,155 @@
 /* pages/movies/movieDetails/movieDetails.wxss */
+page{
+  background-color: rgba(124, 126, 102, 0.7);
+}
+/* 电影条目信息模板样式 */
+text {
+  color: #fff;
+}
+
+.item-key-value {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.item-key-value .item-key {
+  height: 32rpx;
+  flex: 0 0 72rpx;
+  text-align: left;
+  color: #afb3a4;
+}
+
+.item-key-value .item-value {
+  height: 32rpx;
+  flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* 电影详情页面头部 */
+
+.movie-header-container {
+  position: relative;
+  /* overflow: hidden; */
+}
+
+.blur {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: blur(10px);
+  z-index: -999;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center center;
+}
+
+.movie-header {
+  padding: 78rpx 30rpx 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.movie-header .movie-poster {
+  width: 200rpx;
+  height: 280rpx;
+  border-radius: 8rpx;
+}
+
+.movie-header .movie-info {
+  width: 460rpx;
+  height: 280rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.movie-header .movie-info .title, .sub-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.movie-header .movie-info .title {
+  font-size: 40rpx;
+  line-height: 40rpx;
+  height: 46rpx;
+  font-weight: bold;
+}
+
+.movie-header .movie-info .sub-title {
+  font-size: 30rpx;
+  line-height: 30rpx;
+  height: 36rpx;
+  margin-bottom: 20rpx;
+}
+
+/* 剧情简介 */
+.movie-synopsis-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 30rpx;
+}
+
+.movie-synopsis-container .synopsis-title {
+  margin-top: 20rpx;
+  font-size: 32rpx;
+  line-height: 64rpx;
+}
+
+.movie-synopsis-container .synopsis-content {
+  font-size: 28rpx;
+  line-height: 38rpx;
+  height: 190rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+}
+/* 电影人物头像模板样式 */
+.person-pic-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* 待调整 */
+  /* width: 160rpx;
+  height: 270rpx; */
+  
+}
+.person-pic-container .pic {
+  width: 160rpx;
+  height: 224rpx;
+  border-radius: 8rpx;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: center center;
+}
+.person-pic-container name {
+  font-size: 24rpx;
+  line-height: 48rpx;
+}
+/* 演员 */
+.person-container {
+  width: 100%;
+  padding: 30rpx;
+}
+.person-container .title{
+  font-size: 32rpx;
+  line-height: 64rpx;
+}
+.person-container .person{
+  width: 690rpx;
+  height: 272rpx;
+  white-space: nowrap;/* 重要，否则无法滚动 */
+}
+.person-container .person .person-pic-container{
+  display: inline-block;
+  margin-right: 40rpx;
+}
+.person-container .person .person-pic-container:last-child{
+  margin-right: 0;
+}
