修改BUG；电影详情页新增点击展开/折叠简介

--- a/components/stars/stars.wxml
+++ b/components/stars/stars.wxml
@@ -3,5 +3,6 @@
   <view class="stars">
     <image wx:for="{{starsArray}}" wx:key="{{index}}" src="{{ starsPath[item] }}"></image>
   </view>
-  <text class="score">{{fixedScore}}</text>
+  <text wx:if="{{fixedScore}}" class="score">{{fixedScore}}</text>
+  <text wx:else class="tips">暂无评分</text>
 </view>
