1.为兼容安卓，放弃使用justify-content: space-evenly；2.优化电影详情页面高度小于机型屏幕时，屏幕下方出现空白

--- a/components/moviesGrid/moviesGrid.wxss
+++ b/components/moviesGrid/moviesGrid.wxss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;/* space-evenly 每个元素之间的间隔相等 安卓不兼容 */
   background-color: #fff;
 }
 .movies-grid-container movie{
